Explicitly used VS library for pre-commit

--- a/test/geoloco/Geoloco_Regression.ipynb
+++ b/test/geoloco/Geoloco_Regression.ipynb
@@ -74,7 +74,8 @@
    "source": [
     "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'\n",
     "# harmony_host_url = 'https://harmony.sit.earthdata.nasa.gov'\n",
-    "# harmony_host_url = 'http://localhost:3000'"
+    "# harmony_host_url = 'http://localhost:3000'\n",
+    "# harmony_host_url = 'https://harmony.earthdata.nasa.gov'"
    ]
   },
   {
@@ -150,6 +151,27 @@
     "    'downscale_size': [2, 2],\n",
     "}\n",
     "\n",
+    "mod021km_production_info = {\n",
+    "    'collection': Collection(id='C1378227407-LAADS'),\n",
+    "    'granule_id': 'G2576316022-LAADS',\n",
+    "    'variable': ['EV_250_Aggr1km_RefSB'],\n",
+    "    'downscale_size': [0.01802, 0.01802],\n",
+    "}\n",
+    "\n",
+    "mod35l2_production_info = {\n",
+    "    'collection': Collection(id='C1443561895-LAADS'),\n",
+    "    'granule_id': 'G2692389759-LAADS',\n",
+    "    'variable': ['Cloud_Mask'],\n",
+    "    'downscale_size': [0.01802, 0.01802],\n",
+    "}\n",
+    "\n",
+    "mod08d3_production_info = {\n",
+    "    'collection': Collection(id='C1443727145-LAADS'),\n",
+    "    'granule_id': 'G2576607791-LAADS',\n",
+    "    'variable': ['Aerosol_Optical_Depth_Land_Ocean_Mean'],\n",
+    "    'downscale_size': [2, 2],\n",
+    "}\n",
+    "\n",
     "geo_proj4_string = '+a=6378137.0 +b=6356752.3142451793 +no_defs +proj=latlong'\n",
     "\n",
     "resampling_string = 'NN'\n",
@@ -186,16 +208,19 @@
     "    Environment.LOCAL: mod021km_non_production_info,\n",
     "    Environment.UAT: mod021km_non_production_info,\n",
     "    Environment.SIT: mod021km_non_production_info,\n",
+    "    Environment.PROD: mod021km_production_info,\n",
     "}\n",
     "mod35l2_geoloco_env = {\n",
     "    Environment.LOCAL: mod35l2_non_production_info,\n",
     "    Environment.UAT: mod35l2_non_production_info,\n",
     "    Environment.SIT: mod35l2_non_production_info,\n",
+    "    Environment.PROD: mod35l2_production_info,\n",
     "}\n",
     "mod08d3_geoloco_env = {\n",
     "    Environment.LOCAL: mod08d3_non_production_info,\n",
     "    Environment.UAT: mod08d3_non_production_info,\n",
     "    Environment.SIT: mod08d3_non_production_info,\n",
+    "    Environment.PROD: mod08d3_production_info,\n",
     "}\n",
     "\n",
     "if harmony_environment in mod021km_geoloco_env:\n",
