--- a/test/subset-band-name/SubsetBandName_Regression.ipynb
+++ b/test/subset-band-name/SubsetBandName_Regression.ipynb
@@ -37,7 +37,7 @@
     "    submit_and_download,\n",
     ")\n",
     "\n",
-    "from harmony import Client, Collection, Environment, Request\n",
+    "from harmony import Client, Collection, Environment, Request, Dimension\n",
     "\n",
     "from subset_band_name_utitlities import (\n",
     "    remove_results_files,\n",
@@ -143,10 +143,11 @@
     "    'variable': ['EV_250_Aggr500_RefSB'],\n",
     "}\n",
     "\n",
-    "file_indicators = {'MOD02HKM': 'MOD02HKM.EV_250_Aggr500_RefSB_output.hdf'}\n",
+    "file_indicators = {'MOD02HKM': 'MOD02HKM.A2023309.2305.061.2023310073403_subsetted.hdf'}\n",
     "\n",
     "reference_data = {\n",
-    "    'MOD02HKM': 'reference_data/MOD02HKM.A2023309.2305.061.pscs_001729112207.hdf'\n",
+    "    'variable_subset': 'reference_data/MOD02HKM.A2023309.2305.061.pscs_001729112207.hdf',\n",
+    "    'band_subset': 'reference_data/MOD02HKM.A2023309.2305.061.2023310073403.bscs_000502329841.hdf',\n",
     "}"
    ]
   },
@@ -191,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mod02hkm_test = True\n",
+    "mod02hkm_variable_test = True\n",
     "\n",
     "if mod02hkm_subsetbandname_info is not None:\n",
     "\n",
@@ -204,12 +205,68 @@
     "    submit_and_download(harmony_client, mod02hkm_request, file_indicators['MOD02HKM'])\n",
     "\n",
     "    if not compare_data(\n",
-    "        reference_data['MOD02HKM'], file_indicators['MOD02HKM'], 'EV_250_Aggr500_RefSB'\n",
+    "        reference_data['variable_subset'],\n",
+    "        file_indicators['MOD02HKM'],\n",
+    "        'EV_250_Aggr500_RefSB',\n",
     "    ):\n",
     "        print_error('MOD02HKM data mismatch.')\n",
-    "        mod02hkm_test = False\n",
+    "        mod02hkm_variable_test = False\n",
     "\n",
     "    remove_results_files()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abcf8f0d-6c00-4588-8237-1fd6f05f84ad",
+   "metadata": {},
+   "source": [
+    "## Band Subsetting Test\n",
+    "In the cell below, band subsetting is tested by by subsetting bands 1-3 MOD02HKM. \n",
+    "The ouput should yield:\n",
+    "- EV_250_Aggr1km_RefSB: 1,2\n",
+    "- EV_250_Aggr1km_RefSB_Uncert_Indexes: 1,2\n",
+    "- EV_250_Aggr1km_RefSB_Samples_Used: 1,2\n",
+    "- Band_250M: 1,2\n",
+    "- EV_500_Aggr1km_RefSB: 1\n",
+    "- EV_500_Aggr1km_RefSB_Uncert_Indexes: 1\n",
+    "- EV_500_Aggr1km_RefSB_Samples_Used: 1\n",
+    "- Band_500M: 1\n",
+    "\n",
+    "The results are then compared against the reference data file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d3db34f-43b3-467a-83c1-bda0d49ef2ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mod02hkm_band_test = True\n",
+    "\n",
+    "if mod02hkm_subsetbandname_info is not None:\n",
+    "\n",
+    "    mod02hkm_request = Request(\n",
+    "        collection=mod02hkm_subsetbandname_info['collection'],\n",
+    "        granule_id=mod02hkm_subsetbandname_info['granule_id'],\n",
+    "        dimensions=[Dimension(name='band', min=1, max=3)],\n",
+    "    )\n",
+    "\n",
+    "    submit_and_download(harmony_client, mod02hkm_request, file_indicators['MOD02HKM'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8989f028-adab-49e8-9758-6a1ea4f2d570",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not compare_data(reference_data['band_subset'], file_indicators['MOD02HKM'], None):\n",
+    "    print_error('MOD02HKM data mismatch.')\n",
+    "    mod02hkm_band_test = False\n",
+    "\n",
+    "remove_results_files()"
    ]
   },
   {
@@ -227,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subsetbandname_tests = mod02hkm_test\n",
+    "subsetbandname_tests = mod02hkm_variable_test and mod02hkm_band_test\n",
     "\n",
     "if mod02hkm_subsetbandname_info is not None:\n",
     "    if subsetbandname_tests:\n",
