use updated granules and new time bounds

--- a/test/sambah/SAMBAH_Regression.ipynb
+++ b/test/sambah/SAMBAH_Regression.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7ce7f640",
    "metadata": {
     "ExecuteTime": {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "45f380c6",
    "metadata": {
     "ExecuteTime": {
@@ -90,9 +90,7 @@
     ]
    },
    "outputs": [],
-   "source": [
-    "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'"
-   ]
+   "source": "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'"
   },
   {
    "cell_type": "markdown",
@@ -104,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "97dc22bb-e04e-442c-ab12-160ff4842325",
    "metadata": {},
    "outputs": [],
@@ -132,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4420bb6e",
    "metadata": {
     "ExecuteTime": {
@@ -147,11 +145,11 @@
     "    # https://cmr.uat.earthdata.nasa.gov/search/concepts/C1262899916-LARC_CLOUD.html\n",
     "    'collection': Collection(id='C1262899916-LARC_CLOUD'),\n",
     "    'granule_id': [\n",
-    "        'G1263137623-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240328T153020Z_S007G08.nc\n",
-    "        'G1263137394-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240328T153657Z_S007G09.nc\n",
-    "        'G1263137387-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240328T154353Z_S008G01.nc\n",
-    "        'G1263137388-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240328T155033Z_S008G02.nc\n",
-    "        'G1263137378-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240328T155713Z_S008G03.nc\n",
+    "        'G1269044486-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240801T153258Z_S007G07.nc\n",
+    "        'G1269044632-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240801T153935Z_S007G08.nc\n",
+    "        'G1269044623-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240801T154612Z_S007G09.nc\n",
+    "        'G1269044612-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240801T155308Z_S008G01.nc\n",
+    "        'G1269044756-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240801T155948Z_S008G02.nc\n",
     "    ],\n",
     "}\n",
     "\n",
@@ -160,11 +158,11 @@
     "    # https://cmr.earthdata.nasa.gov/search/concepts/C2930725014-LARC_CLOUD.html\n",
     "    'collection': Collection(id='C2930725014-LARC_CLOUD'),\n",
     "    'granule_id': [\n",
-    "        'G3205017917-LARC_CLOUD',\n",
-    "        'G3205017777-LARC_CLOUD',\n",
-    "        'G3205052670-LARC_CLOUD',\n",
-    "        'G3205053541-LARC_CLOUD',\n",
-    "        'G3205052319-LARC_CLOUD',\n",
+    "        'G3181300053-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240801T153258Z_S007G07.nc\n",
+    "        'G3181300108-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240801T153935Z_S007G08.nc\n",
+    "        'G3181299889-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240801T154612Z_S007G09.nc\n",
+    "        'G3181345515-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240801T155308Z_S008G01.nc\n",
+    "        'G3181345531-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240801T155948Z_S008G02.nc\n",
     "    ],\n",
     "}\n",
     "\n",
@@ -183,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0d7e83fa-20f1-4382-b07f-9f59ca1acb11",
    "metadata": {},
    "outputs": [],
@@ -191,8 +189,8 @@
     "request_info = {\n",
     "    'collection': sambah_info[\"collection\"],\n",
     "    'temporal': {\n",
-    "        'start': datetime(2024, 3, 28, 15, 34, 0),\n",
-    "        'stop': datetime(2024, 3, 28, 16, 0, 0),\n",
+    "        'start': datetime(2024, 8, 1, 15, 34, 0),\n",
+    "        'stop': datetime(2024, 8, 1, 16, 0, 0),\n",
     "    },\n",
     "    'spatial': BBox(-170, 33, -10, 38),\n",
     "    'granule_id': sambah_info[\"granule_id\"],\n",
@@ -239,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d6aaf063-1f3c-4d84-b414-ca80e65ef78b",
    "metadata": {
     "ExecuteTime": {
@@ -247,7 +245,21 @@
      "start_time": "2024-11-13T19:17:24.118362Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "89362838_C2930725014-LARC_CLOUD_batch_of_5_starting_from_TEMPO_NO2_L2_V03_20240801T153258Z_S007G07_subsetted_stitched_20240801T155948Z_C2930725014-LARC_CLOUD_merged.nc4\n",
+      "Downloaded: 89362838_C2930725014-LARC_CLOUD_batch_of_5_starting_from_TEMPO_NO2_L2_V03_20240801T153258Z_S007G07_subsetted_stitched_20240801T155948Z_C2930725014-LARC_CLOUD_merged.nc4\n",
+      "Saved output to: temp_var_bbox.nc4\n",
+      "\u001B[92mSuccess: SAMBAH temporal, variable, bounding box request\u001B[0m\n",
+      "89362844_C2930725014-LARC_CLOUD_batch_of_2_starting_from_TEMPO_NO2_L2_V03_20240801T153258Z_S007G07_subsetted_stitched_20240801T153935Z_C2930725014-LARC_CLOUD_merged.nc4\n",
+      "89362853_C2930725014-LARC_CLOUD_batch_of_5_starting_from_TEMPO_NO2_L2_V03_20240801T153258Z_S007G07_subsetted_stitched_20240801T155948Z_C2930725014-LARC_CLOUD_merged.nc4\n",
+      "89362857_C2930725014-LARC_CLOUD_batch_of_1_starting_from_TEMPO_NO2_L2_V03_20240801T153258Z_S007G07_stitched_20240801T153258Z_C2930725014-LARC_CLOUD_merged.nc4\n"
+     ]
+    }
+   ],
    "source": [
     "if request_info is not None:\n",
     "    temp_var_bbox_request = Request(\n",
@@ -288,10 +300,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "90bb3455-f82c-4cd8-93f2-feba79fbed7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloaded: 89362844_C2930725014-LARC_CLOUD_batch_of_2_starting_from_TEMPO_NO2_L2_V03_20240801T153258Z_S007G07_subsetted_stitched_20240801T153935Z_C2930725014-LARC_CLOUD_merged.nc4\n",
+      "Saved output to: var_only.nc4\n",
+      "\u001B[92mSuccess: SAMBAH variable request\u001B[0m\n"
+     ]
+    }
+   ],
    "source": [
     "if request_info is not None:\n",
     "    var_only_request = Request(\n",
@@ -330,10 +352,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4330105a-f9f0-429e-9762-3049f408d635",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloaded: 89362853_C2930725014-LARC_CLOUD_batch_of_5_starting_from_TEMPO_NO2_L2_V03_20240801T153258Z_S007G07_subsetted_stitched_20240801T155948Z_C2930725014-LARC_CLOUD_merged.nc4\n",
+      "Saved output to: spatial_only.nc4\n",
+      "\u001B[92mSuccess: SAMBAH spatial request\u001B[0m\n"
+     ]
+    }
+   ],
    "source": [
     "if request_info is not None:\n",
     "    spatial_only_request = Request(\n",
@@ -372,10 +404,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c747cfcc-e63a-4858-b406-a4ec87b6acb5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloaded: 89362857_C2930725014-LARC_CLOUD_batch_of_1_starting_from_TEMPO_NO2_L2_V03_20240801T153258Z_S007G07_stitched_20240801T153258Z_C2930725014-LARC_CLOUD_merged.nc4\n",
+      "Saved output to: all_data.nc4\n",
+      "\u001B[92mSuccess: SAMBAH no subset single file request\u001B[0m\n"
+     ]
+    }
+   ],
    "source": [
     "if request_info is not None:\n",
     "    all_data_request = Request(\n",
@@ -409,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "73fdd147-74a0-48d3-957f-388e2abe356a",
    "metadata": {},
    "outputs": [],
@@ -437,7 +479,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "papermill-sambah",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -451,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.8"
   },
   "name": "SDS_Regression.ipynb"
  },
