clean up notebook outputs and remove empty cells at end

--- a/test/sambah/SAMBAH_Regression.ipynb
+++ b/test/sambah/SAMBAH_Regression.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7ce7f640",
    "metadata": {
     "ExecuteTime": {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "45f380c6",
    "metadata": {
     "ExecuteTime": {
@@ -90,7 +90,9 @@
     ]
    },
    "outputs": [],
-   "source": "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'"
+   "source": [
+    "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "97dc22bb-e04e-442c-ab12-160ff4842325",
    "metadata": {},
    "outputs": [],
@@ -130,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4420bb6e",
    "metadata": {
     "ExecuteTime": {
@@ -181,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0d7e83fa-20f1-4382-b07f-9f59ca1acb11",
    "metadata": {},
    "outputs": [],
@@ -237,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d6aaf063-1f3c-4d84-b414-ca80e65ef78b",
    "metadata": {
     "ExecuteTime": {
@@ -245,21 +247,7 @@
      "start_time": "2024-11-13T19:17:24.118362Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "89362838_C2930725014-LARC_CLOUD_batch_of_5_starting_from_TEMPO_NO2_L2_V03_20240801T153258Z_S007G07_subsetted_stitched_20240801T155948Z_C2930725014-LARC_CLOUD_merged.nc4\n",
-      "Downloaded: 89362838_C2930725014-LARC_CLOUD_batch_of_5_starting_from_TEMPO_NO2_L2_V03_20240801T153258Z_S007G07_subsetted_stitched_20240801T155948Z_C2930725014-LARC_CLOUD_merged.nc4\n",
-      "Saved output to: temp_var_bbox.nc4\n",
-      "\u001B[92mSuccess: SAMBAH temporal, variable, bounding box request\u001B[0m\n",
-      "89362844_C2930725014-LARC_CLOUD_batch_of_2_starting_from_TEMPO_NO2_L2_V03_20240801T153258Z_S007G07_subsetted_stitched_20240801T153935Z_C2930725014-LARC_CLOUD_merged.nc4\n",
-      "89362853_C2930725014-LARC_CLOUD_batch_of_5_starting_from_TEMPO_NO2_L2_V03_20240801T153258Z_S007G07_subsetted_stitched_20240801T155948Z_C2930725014-LARC_CLOUD_merged.nc4\n",
-      "89362857_C2930725014-LARC_CLOUD_batch_of_1_starting_from_TEMPO_NO2_L2_V03_20240801T153258Z_S007G07_stitched_20240801T153258Z_C2930725014-LARC_CLOUD_merged.nc4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if request_info is not None:\n",
     "    temp_var_bbox_request = Request(\n",
@@ -300,20 +288,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "90bb3455-f82c-4cd8-93f2-feba79fbed7b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloaded: 89362844_C2930725014-LARC_CLOUD_batch_of_2_starting_from_TEMPO_NO2_L2_V03_20240801T153258Z_S007G07_subsetted_stitched_20240801T153935Z_C2930725014-LARC_CLOUD_merged.nc4\n",
-      "Saved output to: var_only.nc4\n",
-      "\u001B[92mSuccess: SAMBAH variable request\u001B[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if request_info is not None:\n",
     "    var_only_request = Request(\n",
@@ -352,20 +330,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "4330105a-f9f0-429e-9762-3049f408d635",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloaded: 89362853_C2930725014-LARC_CLOUD_batch_of_5_starting_from_TEMPO_NO2_L2_V03_20240801T153258Z_S007G07_subsetted_stitched_20240801T155948Z_C2930725014-LARC_CLOUD_merged.nc4\n",
-      "Saved output to: spatial_only.nc4\n",
-      "\u001B[92mSuccess: SAMBAH spatial request\u001B[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if request_info is not None:\n",
     "    spatial_only_request = Request(\n",
@@ -404,20 +372,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c747cfcc-e63a-4858-b406-a4ec87b6acb5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloaded: 89362857_C2930725014-LARC_CLOUD_batch_of_1_starting_from_TEMPO_NO2_L2_V03_20240801T153258Z_S007G07_stitched_20240801T153258Z_C2930725014-LARC_CLOUD_merged.nc4\n",
-      "Saved output to: all_data.nc4\n",
-      "\u001B[92mSuccess: SAMBAH no subset single file request\u001B[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if request_info is not None:\n",
     "    all_data_request = Request(\n",
@@ -451,29 +409,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "73fdd147-74a0-48d3-957f-388e2abe356a",
    "metadata": {},
    "outputs": [],
    "source": [
     "remove_results_files()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a868b30-52d9-45aa-9359-a14d79548ce4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0332c0fd-1332-470f-8312-34eecd94280b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
