DAS-2294: Add configuration and reference files for spl2smp

--- a/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
+++ b/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
@@ -127,7 +127,7 @@
     "\n",
     "The next cell organizes the collections and granules to be tested in each environment.\n",
     "\n",
-    "Additional configuration is set for selecting a subset of the output for comparison in the regression. The selector dictionaries have keys into the top level groups of the output dataset and their dictionaries are subsets along the defined dimensions.  This allows us to compare small parts of very large datasets."
+    "Additional selector configuration is set for choosing a subset of the generated output for direct comparison in the regression. The selector dictionaries have keys into the top level groups of the output dataset and their dictionaries are subsets along the defined dimensions.  This allows us to compare small parts of very large datasets."
    ]
   },
   {
@@ -171,6 +171,13 @@
     "    \"Ancillary_Data\": spl2sma_slice,\n",
     "}\n",
     "\n",
+    "spl2smp_selector = {\n",
+    "    \"Soil_Moisture_Retrieval_Data\": {\n",
+    "        \"y-dim\": slice(0, 200),\n",
+    "        \"x-dim\": slice(400, 600),\n",
+    "    }\n",
+    "}\n",
+    "\n",
     "\n",
     "non_production_configuration = {\n",
     "    'SPL2SMP_E': {\n",
@@ -187,6 +194,11 @@
     "        'collection_concept_id': Collection(id='C1268429729-EEDTEST'),\n",
     "        'granule_id': 'G1268429743-EEDTEST',\n",
     "        'selector': spl2sma_selector,\n",
+    "    },\n",
+    "    'SPL2SMP': {\n",
+    "        'collection_concept_id': Collection(id='C1268429309-EEDTEST'),\n",
+    "        'granule_id': 'G1268454418-EEDTEST',\n",
+    "        'selector': spl2smp_selector,\n",
     "    },\n",
     "}\n",
     "\n",
@@ -206,6 +218,11 @@
     "        'collection_concept_id': Collection(id='C1236303826-NSIDC_ECS'),\n",
     "        'granule_id': '',\n",
     "        'selector': spl2sma_selector,\n",
+    "    },\n",
+    "    'SPL2SMP': {\n",
+    "        'collection_concept_id': Collection(id='TBD'),\n",
+    "        'granule_id': 'TBD',\n",
+    "        'selector': spl2smp_selector,\n",
     "    },\n",
     "}"
    ]
@@ -251,7 +268,7 @@
     "\n",
     "* The cell below loops through the SMAP L2 collections for the configured environment.\n",
     "* A request for gridding the L2 data is submitted to Harmony and the results downloaded.\n",
-    "* Verification compares the results to a previously generated and subsetted reference data file.  This comparison is done only on the first 2000 rows and 2000 columns of the downloaded data to save memory usage. \n"
+    "* Verification compares the results to a previously generated and subsetted reference data file.  This comparison is done only on a selection of rows and columns from the downloaded data to save memory usage. \n"
    ]
   },
   {
