DAS-2244 - black-jupyter correction.

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -160,7 +160,7 @@
     "        'ATL10': {\n",
     "            'collection_concept_id': Collection(id='C1256535487-NSIDC_CUAT'),\n",
     "            'granule_id': 'G1261681735-NSIDC_CUAT',\n",
-    "            'spatial': BBox(161.0, -75.0, 171.0, -74.0),\n",
+    "            'spatial': BBox(w=164, s=-76, e=172, n=-72),\n",
     "        },\n",
     "        'ATL12': {\n",
     "            'collection_concept_id': Collection(id='C1256476536-NSIDC_CUAT'),\n",
@@ -247,7 +247,7 @@
     "        #        'ATL10': {\n",
     "        #            'collection_concept_id': Collection(id='C2613553243-NSIDC_CPRD'),\n",
     "        #            'granule_id': 'G2738637140-NSIDC_CPRD',\n",
-    "        #            'spatial': BBox(161.0, -75.0, 171.0, -74.0),\n",
+    "        #            'spatial': BBox(w=164, s=-76, e=172, n=-72)\n",
     "        #        },\n",
     "        'ATL12': {\n",
     "            'collection_concept_id': Collection(id='C2613553216-NSIDC_CPRD'),\n",
@@ -384,9 +384,9 @@
     "            compare_results_to_reference_file(\n",
     "                test_output, test_reference, identical=False\n",
     "            )\n",
-    "            print_success(f'{shortname} {test_name} test request.')\n",
+    "            print_success(f'{shortname} {test_name} test request complete.')\n",
     "\n",
-    "        print_success(f'{test_name} test suite.')\n",
+    "        print_success(f'{test_name} test suite complete.')\n",
     "    else:\n",
     "        print(\n",
     "            f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
@@ -441,12 +441,12 @@
     "                identical=False,\n",
     "                coordinates_to_fix=test_config['coords_to_rename'],\n",
     "            )\n",
-    "            print_success(f'{shortname} {test_name} test request.')\n",
+    "            print_success(f'{shortname} {test_name} test request complete.')\n",
     "\n",
-    "        print_success(f'{test_name} test suite.')\n",
+    "        print_success(f'{test_name} test suite complete.')\n",
     "    else:\n",
     "        print(\n",
-    "            f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
+    "            f'Temporal range tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
     "        )"
    ]
   },
@@ -495,21 +495,21 @@
     "            compare_results_to_reference_file(\n",
     "                test_output, test_reference, identical=False, coordinates_to_fix=[]\n",
     "            )\n",
-    "            print_success(f'{shortname} {test_name} test request.')\n",
+    "            print_success(f'{shortname} {test_name} test request complete.')\n",
     "\n",
-    "        print_success(f'{test_name} test suite.')\n",
+    "        print_success(f'{test_name} test suite complete.')\n",
     "    else:\n",
     "        print(\n",
-    "            f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
+    "            f'Shapefile tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
     "        )"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:new_trajectory_subsetter_tests]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-new_trajectory_subsetter_tests-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -521,7 +521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
