Correct conda env in notebook.

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -507,9 +507,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:new_trajectory_subsetter_tests]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-new_trajectory_subsetter_tests-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -521,7 +521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
