Uncomment ATL10 v006 prod tests in NSIDC Trajectory Subsetter notebook.

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -243,12 +243,11 @@
     "            'granule_id': 'G2645102344-NSIDC_CPRD',\n",
     "            'spatial': BBox(-105.5, 40.0, -105.0, 40.25),\n",
     "        },\n",
-    "        # Blocked by DAS-2244: and PROD need UMM-S configuration\n",
-    "        #        'ATL10': {\n",
-    "        #            'collection_concept_id': Collection(id='C2613553243-NSIDC_CPRD'),\n",
-    "        #            'granule_id': 'G2738637140-NSIDC_CPRD',\n",
-    "        #            'spatial': BBox(w=164, s=-76, e=172, n=-72)\n",
-    "        #        },\n",
+    "        'ATL10': {\n",
+    "            'collection_concept_id': Collection(id='C2613553243-NSIDC_CPRD'),\n",
+    "            'granule_id': 'G2738637140-NSIDC_CPRD',\n",
+    "            'spatial': BBox(w=164, s=-76, e=172, n=-72),\n",
+    "        },\n",
     "        'ATL12': {\n",
     "            'collection_concept_id': Collection(id='C2613553216-NSIDC_CPRD'),\n",
     "            'granule_id': 'G2952685768-NSIDC_CPRD',\n",
@@ -297,12 +296,11 @@
     "            'granule_id': 'G2666419430-NSIDC_CPRD',\n",
     "            'shape': 'ancillary/Tasmania_sliver.geojson',\n",
     "        },\n",
-    "        # Blocked by DAS-2244: and PROD need UMM-S configuration\n",
-    "        # 'ATL10': {\n",
-    "        #     'collection_concept_id': Collection(id='C2613553243-NSIDC_CPRD'),\n",
-    "        #     'granule_id': 'G2738637140-NSIDC_CPRD',\n",
-    "        #     'shape': 'ancillary/Ross_Sea_positive_lon_only.geojson',\n",
-    "        # },\n",
+    "        'ATL10': {\n",
+    "            'collection_concept_id': Collection(id='C2613553243-NSIDC_CPRD'),\n",
+    "            'granule_id': 'G2738637140-NSIDC_CPRD',\n",
+    "            'shape': 'ancillary/Ross_Sea_positive_lon_only.geojson',\n",
+    "        },\n",
     "    },\n",
     "}"
    ]
