--- a/test/regridder/Regridder_Regression.ipynb
+++ b/test/regridder/Regridder_Regression.ipynb
@@ -71,11 +71,31 @@
    "outputs": [],
    "source": [
     "from harmony import Collection, Environment, Client, Request\n",
-    "from utility import print_success\n",
     "from tempfile import TemporaryDirectory\n",
-    "import xarray as xr\n",
     "\n",
     "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c834b55a-41fb-4ff3-aa27-50069432cf17",
+   "metadata": {},
+   "source": [
+    "set up shared utilities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba3a9da5-237a-49a6-902a-5149fa1cc11d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "sys.path.append('../shared_utils')\n",
+    "from utilities import print_success, submit_and_download\n",
+    "from compare import compare_results_to_reference_file"
    ]
   },
   {
@@ -153,35 +173,28 @@
    "outputs": [],
    "source": [
     "if environment_information is not None:\n",
-    "    merra_request = Request(\n",
-    "        collection=environment_information['merra_collection'],\n",
-    "        granule_id=environment_information['merra_granules'][0],\n",
-    "        interpolation='Elliptical Weighted Averaging',\n",
-    "        scale_size=(2.5, 2.5),\n",
-    "        scale_extent=(-180, -90, 180, 90),\n",
-    "        crs='+proj=latlong +datum=WGS84 +no_defs',\n",
-    "        height=72,\n",
-    "        width=144,\n",
-    "    )\n",
-    "    merra_job_id = harmony_client.submit(merra_request)\n",
-    "    harmony_client.wait_for_processing(merra_job_id, show_progress=True)\n",
     "    with TemporaryDirectory() as temp_dir:\n",
-    "        downloaded_grid_outputs = [\n",
-    "            file_future.result()\n",
-    "            for file_future in harmony_client.download_all(\n",
-    "                merra_job_id, overwrite=True, directory=temp_dir\n",
-    "            )\n",
-    "        ]\n",
-    "        reference_ds = xr.open_dataset(\n",
-    "            'reference_data/MERRA2_400.tavg1_2d_slv_Nx.20210605_regridded.nc4',\n",
-    "            engine='netcdf4',\n",
+    "        merra_request = Request(\n",
+    "            collection=environment_information['merra_collection'],\n",
+    "            granule_id=environment_information['merra_granules'][0],\n",
+    "            interpolation='Elliptical Weighted Averaging',\n",
+    "            scale_size=(2.5, 2.5),\n",
+    "            scale_extent=(-180, -90, 180, 90),\n",
+    "            crs='+proj=latlong +datum=WGS84 +no_defs',\n",
+    "            height=72,\n",
+    "            width=144,\n",
     "        )\n",
-    "        output_ds = xr.open_dataset(\n",
-    "            Path(temp_dir, downloaded_grid_outputs[0]), engine='netcdf4'\n",
+    "\n",
+    "        test_output = temp_dir / Path('MERRA2_test.h5')\n",
+    "        test_reference = Path(\n",
+    "            'reference_data/MERRA2_400.tavg1_2d_slv_Nx.20210605_regridded.nc4'\n",
     "        )\n",
-    "        assert output_ds.equals(\n",
-    "            reference_ds\n",
-    "        ), 'Generated data did not match reference dataset'\n",
+    "\n",
+    "        submit_and_download(harmony_client, merra_request, test_output)\n",
+    "\n",
+    "        assert test_output.exists(), \"Unsuccessful Harmony Request: MERRA2\"\n",
+    "\n",
+    "        compare_results_to_reference_file(test_output, test_reference, identical=False)\n",
     "\n",
     "    print_success('Regrid MERRA2 Data Success')\n",
     "else:\n",
@@ -212,37 +225,28 @@
    "outputs": [],
    "source": [
     "if environment_information is not None:\n",
-    "    atl16_request = Request(\n",
-    "        collection=environment_information['atl16_collection'],\n",
-    "        granule_id=environment_information['atl16_granules'][0],\n",
-    "        interpolation='Elliptical Weighted Averaging',\n",
-    "        scale_size=(5.0, 5.0),\n",
-    "        scale_extent=(-180, -90, 180, 90),\n",
-    "        crs='EPSG:4326',\n",
-    "        height=36,\n",
-    "        width=72,\n",
-    "    )\n",
-    "    atl16_job_id = harmony_client.submit(atl16_request)\n",
-    "    harmony_client.wait_for_processing(atl16_job_id, show_progress=True)\n",
-    "\n",
     "    with TemporaryDirectory() as temp_dir:\n",
-    "        downloaded_grid_outputs = [\n",
-    "            file_future.result()\n",
-    "            for file_future in harmony_client.download_all(\n",
-    "                atl16_job_id, overwrite=True, directory=temp_dir\n",
-    "            )\n",
-    "        ]\n",
-    "        reference_ds = xr.open_dataset(\n",
-    "            'reference_data/ATL16_20200308000030_11040601_004_01_regridded.h5',\n",
-    "            engine='netcdf4',\n",
-    "        )\n",
-    "        output_ds = xr.open_dataset(\n",
-    "            Path(temp_dir, downloaded_grid_outputs[0]), engine='netcdf4'\n",
+    "        atl16_request = Request(\n",
+    "            collection=environment_information['atl16_collection'],\n",
+    "            granule_id=environment_information['atl16_granules'][0],\n",
+    "            interpolation='Elliptical Weighted Averaging',\n",
+    "            scale_size=(5.0, 5.0),\n",
+    "            scale_extent=(-180, -90, 180, 90),\n",
+    "            crs='EPSG:4326',\n",
+    "            height=36,\n",
+    "            width=72,\n",
     "        )\n",
     "\n",
-    "        assert output_ds.equals(\n",
-    "            reference_ds\n",
-    "        ), 'Regridded ATL16 data did not match reference dataset'\n",
+    "        test_output = temp_dir / Path(\"ATL16_test.h5\")\n",
+    "        test_reference = Path(\n",
+    "            'reference_data/ATL16_20200308000030_11040601_004_01_regridded.h5'\n",
+    "        )\n",
+    "\n",
+    "        submit_and_download(harmony_client, atl16_request, test_output)\n",
+    "\n",
+    "        assert test_output.exists(), 'Unsuccessful Harmony Request: ATL16'\n",
+    "\n",
+    "        compare_results_to_reference_file(test_output, test_reference, identical=False)\n",
     "\n",
     "    print_success('Regrid ATL16 Data Success')\n",
     "else:\n",
@@ -269,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.9"
   },
   "name": "Regridder_Regression.ipynb"
  },
