--- a/test/subset-band-name/SubsetBandName_Regression.ipynb
+++ b/test/subset-band-name/SubsetBandName_Regression.ipynb
@@ -173,7 +173,9 @@
     "    # Environment.PROD: mod02hkm_production_info,\n",
     "}\n",
     "\n",
-    "mod02hkm_subsetbandname_info = mod02hkm_subsetbandname_env.get(harmony_environment)"
+    "mod02hkm_subsetbandname_info = mod02hkm_subsetbandname_env.get(harmony_environment)\n",
+    "print(harmony_environment)\n",
+    "print(mod02hkm_subsetbandname_info)"
    ]
   },
   {
@@ -252,21 +254,15 @@
     "        dimensions=[Dimension(name='band', min=1, max=3)],\n",
     "    )\n",
     "\n",
-    "    submit_and_download(harmony_client, mod02hkm_request, file_indicators['MOD02HKM'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8989f028-adab-49e8-9758-6a1ea4f2d570",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if not compare_data(reference_data['band_subset'], file_indicators['MOD02HKM'], None):\n",
-    "    print_error('MOD02HKM data mismatch.')\n",
-    "    mod02hkm_band_test = False\n",
+    "    submit_and_download(harmony_client, mod02hkm_request, file_indicators['MOD02HKM'])\n",
     "\n",
-    "remove_results_files()"
+    "    if file_indicators['MOD02HKM'] and not compare_data(\n",
+    "        reference_data['band_subset'], file_indicators['MOD02HKM'], None\n",
+    "    ):\n",
+    "        print_error('MOD02HKM data mismatch.')\n",
+    "        mod02hkm_band_test = False\n",
+    "\n",
+    "    remove_results_files()"
    ]
   },
   {
