DAS-2290 Add SPL3SMP_E, SPL3SMP, and SPL3FTP_E tests

--- a/test/hoss/HOSS_Regression.ipynb
+++ b/test/hoss/HOSS_Regression.ipynb
@@ -841,14 +841,14 @@
    "outputs": [],
    "source": [
     "if test_is_configured(hoss_shape_file_polygon_spatial_3d_info, 'collection'):\n",
-    "    hoss_shape_file_polygon_spatial_3d_file_name = 'hoss_shape_file_subset_3d_reference.nc4'\n",
+    "    hoss_shape_file_polygon_spatial_3d_file_name = 'hoss_shape_file_subset_3d.nc4'\n",
     "    hoss_shape_file_polygon_spatial_3d_request = Request(\n",
     "        collection=hoss_shape_file_polygon_spatial_3d_info['collection'],\n",
     "        granule_id=hoss_shape_file_polygon_spatial_3d_info['granule_id'],\n",
     "        shape=hoss_shape_file_polygon_spatial_3d_info['shape_file_path'],\n",
     "        variables=[    \n",
     "            'Soil_Moisture_Retrieval_Data_AM/landcover_class',\n",
-    "            'Soil_Moisture_Retrieval_Data_AM/landcover_class',\n",
+    "            'Soil_Moisture_Retrieval_Data_PM/landcover_class_pm',\n",
     "        ],\n",
     "    )\n",
     "\n",
@@ -923,7 +923,7 @@
    "outputs": [],
    "source": [
     "if test_is_configured(hoss_shape_file_polygon_spatial_info, 'collection'):\n",
-    "    hoss_shape_file_polygon_spatial_file_name = 'hoss_shape_file_subset_reference.nc4'\n",
+    "    hoss_shape_file_polygon_spatial_file_name = 'hoss_shape_file_subset.nc4'\n",
     "    hoss_shape_file_polygon_spatial_request = Request(\n",
     "        collection=hoss_shape_file_polygon_spatial_info['collection'],\n",
     "        granule_id=hoss_shape_file_polygon_spatial_info['granule_id'],\n",
@@ -945,7 +945,7 @@
     "\n",
     "    compare_results_to_reference_file(\n",
     "        hoss_shape_file_polygon_spatial_file_name,\n",
-    "        'reference_files/hoss_shape_file_subset_3d_reference.nc4', '/'\n",
+    "        'reference_files/hoss_shape_file_subset_reference.nc4', '/'\n",
     "    )\n",
     "\n",
     "    print_success('HOSS polygon spatial subset request.')\n",
