DAS-2290 Pre check reformat notebook

--- a/test/hoss/HOSS_Regression.ipynb
+++ b/test/hoss/HOSS_Regression.ipynb
@@ -763,22 +763,26 @@
     "    hoss_bbox_spatial_request = Request(\n",
     "        collection=hoss_bbox_spatial_info['collection'],\n",
     "        granule_id=[hoss_bbox_spatial_info['granule_id']],\n",
-    "        variables=[    \n",
+    "        variables=[\n",
     "            'Freeze_Thaw_Retrieval_Data_Global/altitude_dem',\n",
     "            'Freeze_Thaw_Retrieval_Data_Global/transition_state_flag',\n",
     "            'Freeze_Thaw_Retrieval_Data_Polar/altitude_dem',\n",
     "            'Freeze_Thaw_Retrieval_Data_Polar/transition_state_flag',\n",
-    "    ],\n",
+    "        ],\n",
     "        spatial=hoss_bbox_spatial_bbox,\n",
     "    )\n",
     "\n",
-    "    submit_and_download(harmony_client, hoss_bbox_spatial_request, hoss_bbox_spatial_file_name)\n",
+    "    submit_and_download(\n",
+    "        harmony_client, hoss_bbox_spatial_request, hoss_bbox_spatial_file_name\n",
+    "    )\n",
     "    assert exists(\n",
     "        hoss_bbox_spatial_file_name\n",
     "    ), 'Unsuccessful HOSS bounding box spatial request.'\n",
     "\n",
     "    compare_results_to_reference_file(\n",
-    "        hoss_bbox_spatial_file_name, 'reference_files/hoss_bbox_spatial_reference.nc4', '/'\n",
+    "        hoss_bbox_spatial_file_name,\n",
+    "        'reference_files/hoss_bbox_spatial_reference.nc4',\n",
+    "        '/',\n",
     "    )\n",
     "\n",
     "    print_success('HOSS bounding box spatial request.')\n",
@@ -828,7 +832,9 @@
     "}\n",
     "\n",
     "if harmony_environment in hoss_shape_file_polygon_spatial_3d_env:\n",
-    "    hoss_shape_file_polygon_spatial_3d_info = hoss_shape_file_polygon_spatial_3d_env[harmony_environment]\n",
+    "    hoss_shape_file_polygon_spatial_3d_info = hoss_shape_file_polygon_spatial_3d_env[\n",
+    "        harmony_environment\n",
+    "    ]\n",
     "else:\n",
     "    hoss_shape_file_polygon_spatial_3d_info = None"
    ]
@@ -846,22 +852,26 @@
     "        collection=hoss_shape_file_polygon_spatial_3d_info['collection'],\n",
     "        granule_id=hoss_shape_file_polygon_spatial_3d_info['granule_id'],\n",
     "        shape=hoss_shape_file_polygon_spatial_3d_info['shape_file_path'],\n",
-    "        variables=[    \n",
+    "        variables=[\n",
     "            'Soil_Moisture_Retrieval_Data_AM/landcover_class',\n",
     "            'Soil_Moisture_Retrieval_Data_PM/landcover_class_pm',\n",
     "        ],\n",
     "    )\n",
     "\n",
-    "    submit_and_download(harmony_client, hoss_shape_file_polygon_spatial_3d_request,\n",
-    "                        hoss_shape_file_polygon_spatial_3d_file_name)\n",
-    "    \n",
+    "    submit_and_download(\n",
+    "        harmony_client,\n",
+    "        hoss_shape_file_polygon_spatial_3d_request,\n",
+    "        hoss_shape_file_polygon_spatial_3d_file_name,\n",
+    "    )\n",
+    "\n",
     "    assert exists(\n",
     "        hoss_shape_file_polygon_spatial_3d_file_name\n",
     "    ), 'Unsuccessful HOSS polygon spatial subset for 3D variables request.'\n",
     "\n",
     "    compare_results_to_reference_file(\n",
     "        hoss_shape_file_polygon_spatial_3d_file_name,\n",
-    "        'reference_files/hoss_shape_file_subset_3d_reference.nc4', '/'\n",
+    "        'reference_files/hoss_shape_file_subset_3d_reference.nc4',\n",
+    "        '/',\n",
     "    )\n",
     "\n",
     "    print_success('HOSS polygon spatial subset for 3D variables request.')\n",
@@ -882,7 +892,7 @@
     "* `harmony-opendap-subsetter` to perform HOSS operations and extract a rectangular portion of the longitude latitude grid. This will match the bounding box.\n",
     "* `sds/maskfill-harmony` to fill any pixels in the rectangular array segment, but outside the GeoJSON shape.\n",
     "\n",
-    "TODO: Add Environment.PROD once NSIC updates SPL3SMP_E in the production environment."
+    "TODO: Add Environment.PROD once NSIC updates SPL3SMP_E in the production environment.\n"
    ]
   },
   {
@@ -910,7 +920,9 @@
     "}\n",
     "\n",
     "if harmony_environment in hoss_shape_file_polygon_spatial_env:\n",
-    "    hoss_shape_file_polygon_spatial_info = hoss_shape_file_polygon_spatial_env[harmony_environment]\n",
+    "    hoss_shape_file_polygon_spatial_info = hoss_shape_file_polygon_spatial_env[\n",
+    "        harmony_environment\n",
+    "    ]\n",
     "else:\n",
     "    hoss_shape_file_polygon_spatial_info = None"
    ]
@@ -928,7 +940,7 @@
     "        collection=hoss_shape_file_polygon_spatial_info['collection'],\n",
     "        granule_id=hoss_shape_file_polygon_spatial_info['granule_id'],\n",
     "        shape=hoss_shape_file_polygon_spatial_info['shape_file_path'],\n",
-    "        variables=[    \n",
+    "        variables=[\n",
     "            'Soil_Moisture_Retrieval_Data_AM/surface_flag',\n",
     "            'Soil_Moisture_Retrieval_Data_PM/surface_flag_pm',\n",
     "            'Soil_Moisture_Retrieval_Data_Polar_AM/surface_flag',\n",
@@ -936,16 +948,20 @@
     "        ],\n",
     "    )\n",
     "\n",
-    "    submit_and_download(harmony_client, hoss_shape_file_polygon_spatial_request,\n",
-    "                        hoss_shape_file_polygon_spatial_file_name)\n",
-    "    \n",
+    "    submit_and_download(\n",
+    "        harmony_client,\n",
+    "        hoss_shape_file_polygon_spatial_request,\n",
+    "        hoss_shape_file_polygon_spatial_file_name,\n",
+    "    )\n",
+    "\n",
     "    assert exists(\n",
     "        hoss_shape_file_polygon_spatial_file_name\n",
     "    ), 'Unsuccessful HOSS polygon spatial subset request.'\n",
     "\n",
     "    compare_results_to_reference_file(\n",
     "        hoss_shape_file_polygon_spatial_file_name,\n",
-    "        'reference_files/hoss_shape_file_subset_reference.nc4', '/'\n",
+    "        'reference_files/hoss_shape_file_subset_reference.nc4',\n",
+    "        '/',\n",
     "    )\n",
     "\n",
     "    print_success('HOSS polygon spatial subset request.')\n",
