Removing debugging print outs

--- a/test/subset-band-name/SubsetBandName_Regression.ipynb
+++ b/test/subset-band-name/SubsetBandName_Regression.ipynb
@@ -173,9 +173,7 @@
     "    # Environment.PROD: mod02hkm_production_info,\n",
     "}\n",
     "\n",
-    "mod02hkm_subsetbandname_info = mod02hkm_subsetbandname_env.get(harmony_environment)\n",
-    "print(harmony_environment)\n",
-    "print(mod02hkm_subsetbandname_info)"
+    "mod02hkm_subsetbandname_info = mod02hkm_subsetbandname_env.get(harmony_environment)"
    ]
   },
   {
